--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/2e7ad8a127.js" crossorigin="anonymous"></script>     
     <body>
 
-        <h1 class ="smallscreen "> please use a big srceen</h1>
+        <h1 class ="smallscreen "> please use a big screen</h1>
     <div id="fullbackg"  class="background"><!--full background-->
         <div class="fixed text-white d-flex flex-column justify-content-end">
             <i id="zoom" class="fa-solid fa-magnifying-glass-plus"></i>
